<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tvNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btnCancel"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="325dp"
        android:text="No Contact Selected"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvFromDateTime"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="266dp"
        android:text="No Location Selected"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="133dp"
        android:layout_marginRight="55dp"
        android:layout_marginBottom="97dp"
        android:text="Pick Contact" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="145dp"
        android:layout_marginRight="55dp"
        android:layout_marginBottom="28dp"
        android:text="Start Trip" />

    <Button
        android:id="@+id/btnLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btnCancel"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="175dp"
        android:text="Pick Location" />

    <TextView
        android:id="@+id/tvLatDest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="502dp"
        android:text="Latitude " />

    <TextView
        android:id="@+id/tvLongitudeDest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="441dp"
        android:text="Longitude" />

    <TextView
        android:id="@+id/tvLatCurr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="205dp"
        android:layout_marginBottom="504dp"
        android:text="Latitude " />

    <TextView
        android:id="@+id/tvLongitudeCurr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="203dp"
        android:layout_marginBottom="439dp"
        android:text="Longitude" />

    <TextView
        android:id="@+id/CurrTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="268dp"
        android:layout_marginBottom="571dp"
        android:text="Current"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/DestTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="573dp"
        android:text="Destination"
        android:textSize="24sp" />
</RelativeLayout>