...
            android:id="@+id/input_search"
            android:background="@null"
            android:imeOptions="actionSearch"
            android:hint="Enter a Location Name"/>

        <Button
            android:id="@+id/pickLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="-1dp"
            android:layout_marginBottom="671dp"
            android:text="Pick Location " />
...
